--- a/index.html
+++ b/index.html
@@ -1,36 +1,74 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="mystyle.css">
-        <script>
-            var myAudio = new Audio('amogus.mp3'); 
-            myAudio.addEventListener('ended', function() {
-                this.currentTime = 0;
-                this.play();
-            }, false);
-            
-            done = false
-            function playAudio() {
-                if (done == false) {
-                    myAudio.play();
-                    done = true
-                }
-            }
+﻿<!doctype html>
 
-            function changeBackground(url) {
-                document.body.style.backgroundImage = url;
-            }
+<html lang="pl-PL">
+<head>
+    <meta charset="utf-8">
 
-            function buttonClicked(urlb) {
-                playAudio();
-                changeBackground(urlb);
-            }
-        </script>
-    </head>
-    <body style = "background: url(black.png)">
-        <img src="button.png" onclick="buttonClicked('url(jerma.jpg)')" class="center">
+    <link rel="icon" href="neco_arc.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link href="http://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css">
 
-        <h1></h1>
-        <p></p>
-    </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Super strona xd</title>
+
+
+
+</head>
+
+<body>
+    <div id="wrapper">
+        <header>
+            <div class="container">
+                
+
+                <nav>
+                    <h2> Super strona </h2>
+                    <input type="image" id="image" alt="Login" src="./images/menuicon.png" onclick="toggleNavBar()" class="navbutton">
+                    <ul id="navTogglable">
+                        <li> <a class="active" href="index.html"> Strona główna </a></li>
+                        <li> <a href="lista-0.html"> Lista </a></li>
+                        <li> <a href="#"> Fuck you </a></li>
+
+
+                    </ul>
+
+
+                </nav>
+
+
+
+            </div>
+        </header>
+
+
+        <div id="content">
+
+            <h1> Sussy baka </h1>
+            <hr>
+            <!--<img class="imagemain" src="./images/mainimage.jpg"> -->
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ligula leo, sodales eu nulla eget, bibendum luctus augue. Cras consectetur augue quis justo finibus, et maximus sapien fringilla. Fusce eu magna quis diam tempus semper. Suspendisse suscipit mi sed vulputate tempor. Aenean vel dolor consectetur, efficitur orci sed, ultricies turpis. Phasellus gravida maximus risus non euismod. Nunc at euismod mi, et dictum purus.
+            </p>
+
+            <p>
+                Curabitur aliquet ut ipsum vel posuere. Vivamus pharetra nisl quis sem commodo faucibus. Suspendisse hendrerit, nisl nec convallis posuere, metus sem efficitur tellus, ac placerat neque erat sit amet risus. Sed condimentum, tellus non porttitor posuere, purus risus convallis ligula, ac interdum sem purus ac velit. Aliquam lacinia cursus est sed eleifend. Nullam scelerisque, augue quis convallis fermentum, libero nisl tincidunt tellus, non egestas tortor magna quis ligula. Nullam sapien orci, feugiat et sagittis non, posuere rutrum sem. Phasellus nec blandit justo. Curabitur imperdiet orci enim, sit amet elementum est aliquet at. Proin vulputate tellus non porta ultricies. Cras sed placerat lorem, ut suscipit odio.
+            </p>
+
+            <p>
+                Sed mi quam, luctus sed sem non, rhoncus fermentum mi. Nam vitae turpis risus. Nulla placerat cursus tortor ut pellentesque. Praesent pharetra sit amet odio sit amet semper. Aliquam erat volutpat. Aenean feugiat accumsan gravida. Etiam in sodales ante, ac sagittis odio. Morbi tristique, metus et condimentum tristique, lorem eros bibendum purus, id molestie nisi turpis vel sapien. Fusce elementum, nulla ut ornare vehicula, lacus nisi elementum sem, vel mollis tortor ante in orci. Vivamus congue sodales mauris, vel tincidunt metus lacinia malesuada. Nulla quis elit tincidunt, rutrum diam nec, vestibulum nisi. Mauris fermentum gravida congue. Morbi vestibulum, nisi tristique tempor congue, enim augue mollis augue, eget varius orci urna eu arcu. Proin interdum erat vel sollicitudin tincidunt.
+            </p>
+
+            <p>
+                Morbi sed lectus feugiat, ultrices odio nec, consectetur tellus. Morbi purus magna, interdum et odio ac, suscipit fermentum quam. Nunc feugiat erat in justo faucibus accumsan. Curabitur ac purus eu dui congue malesuada pretium a sem. In hac habitasse platea dictumst. In in nisi nec nisi iaculis tincidunt at ac turpis. Maecenas laoreet hendrerit sollicitudin. Proin feugiat tortor porta tristique malesuada. Donec rhoncus in tortor eu blandit. Cras eget turpis cursus, iaculis metus sed, convallis risus. Aenean at turpis dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam luctus, ligula in scelerisque ornare, tellus neque vulputate metus, in tempus diam nisl nec leo. Pellentesque faucibus tincidunt lorem. Donec mauris ex, pulvinar sed sagittis in, euismod ut est. Cras ut velit elementum, ultrices elit vitae, porta magna.
+            </p>
+
+            <br><br><br>
+
+        </div>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
