--- a/widgets/statuscafe/statuscafe.html
+++ b/widgets/statuscafe/statuscafe.html
@@ -3,12 +3,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Status.cafe Widget</title>
     <style>
-      
+      /* Scoped widget styles: use CSS variables to adapt to host page */
+      .status-widget {
+        --status-bg: rgba(255,255,255,0.9);
+        --status-border: rgba(0,0,0,0.08);
+        --status-color: #111;
+        --status-text: #111;
+        --status-muted: #666;
+        --status-link: #0b66c2;
+        --status-radius: 10px;
+        --status-padding: 0.65rem 0.9rem;
+        font-family: inherit; /* inherit host font */
+        color: var(--status-color);
+        background: var(--status-bg);
+        border: 1px solid var(--status-border);
+        padding: var(--status-padding);
+        border-radius: var(--status-radius);
+        box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+        display: inline-block;
+        max-width: 420px;
+        line-height: 1.3;
+        font-size: 14px;
+      }
+
+      /* Friendly reset for paragraphs inside widget */
+      .status-widget p {
+        margin: 0;
+      }
+
+      .status-widget .face {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        margin-bottom: 0.25rem;
+        font-weight: 600;
+        color: var(--status-text);
+        font-size: 1rem;
+      }
+
+      /* If the fetched face includes an <img> avatar, size and round it */
+      .status-widget .face img {
+        width: 32px;
+        height: 32px;
+        border-radius: 999px;
+        object-fit: cover;
+        display: inline-block;
+      }
+
+      /* Fallback when face is an emoji or text */
+      .status-widget .face:not(:has(img)) {
+        font-size: 1.2rem;
+      }
+
+      .status-widget .username {
+        color: var(--status-link);
+        text-decoration: none;
+        font-weight: 700;
+      }
+
+      .status-widget .username:hover,
+      .status-widget .username:focus {
+        text-decoration: underline;
+      }
+
+      .status-widget .time-ago {
+        font-size: 12px;
+        color: var(--status-muted);
+        margin-bottom: 0.45rem;
+      }
+
+      .status-widget .status-content {
+        color: var(--status-text);
+        font-size: 0.95rem;
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
+
+      /* Dark theme sensible defaults when host prefers dark */
+      @media (prefers-color-scheme: dark) {
+        .status-widget {
+          --status-bg: rgba(20,20,20,0.6);
+          --status-border: rgba(255,255,255,0.04);
+          --status-color: #eee;
+          --status-text: #e8e8e8;
+          --status-muted: #9aa0a6;
+          --status-link: #7fb3ff;
+          box-shadow: 0 1px 2px rgba(0,0,0,0.6);
+        }
+      }
+
+      /* Make it responsive when embedded in narrow places */
+      @media (max-width: 360px) {
+        .status-widget { font-size: 13px; max-width: 100%; padding: 0.5rem; }
+        .status-widget .face img { width: 28px; height: 28px; }
+      }
     </style>
   </head>
   <body>
     <div class="status-widget">
-      <p class="face">✨<a class="username" href="https://status.cafe/users/szwk" target="_blank" rel="noopener noreferrer">szwk</a></p>
+      <p class="face"><a class="username" href="https://status.cafe/users/szwk" target="_blank" rel="noopener noreferrer">szwk</a></p>
       <p class="time-ago"></p>
       <p class="status-content"></p>
     </div>
