--- a/widgets/statuscafe/statuscafe.html
+++ b/widgets/statuscafe/statuscafe.html
@@ -3,6 +3,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Status.cafe Widget</title>
     <style>
+      .body {
+        margin: 0;
+        padding: 0;
+        background: transparent;
+      }
       /* Widget styled to match the main site's theme variables (style.css)
          It prefers the host's CSS variables when available: --panel, --text, --muted, --accent
          If embedded in an iframe those variables won't cross origins; in that case the fallbacks below apply. */
