--- a/widgets/visitors/visitor_counter.html
+++ b/widgets/visitors/visitor_counter.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Visitor Counter Widget</title>
   <style>
-    :root{--bg:#1f202c;--panel:#221238;--accent:#afedf9;--muted:#9aa6b2}
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
+    :root{--accent:#afedf9}
     html,body{height:100%;margin:0;background:transparent;font-family:Arial, sans-serif}
-    .visitor-module{display:flex;flex-direction:column;align-items:center;gap:6px;background:linear-gradient(180deg,var(--bg),var(--panel));padding:10px;border-radius:4px;border:2px solid rgba(35,35,35,0.9);box-shadow:none;color:var(--accent)}
-    .visitor-legend{font-family: 'Orbitron', monospace;font-size:0.78rem;color:var(--accent);text-transform:uppercase;letter-spacing:1px}
-    .visitor-counter{font-family: 'Orbitron', monospace;font-weight:700;font-size:1.2rem;color:var(--accent);padding:6px 14px;letter-spacing:1px;min-width:120px;text-align:center;background:transparent}
-    .visitor-counter::after{content:'';display:inline-block;width:6px;height:6px;margin-left:8px;border-radius:50%;background:rgba(175,237,249,0.9);box-shadow:0 0 8px rgba(175,237,249,0.6);opacity:0.85;vertical-align:middle}
-    @media (max-width:420px){.visitor-counter{font-size:1rem;min-width:86px;padding:4px 8px}}
+    .visitor-module{display:flex;flex-direction:column;align-items:center;gap:6px;background:transparent;padding:6px 8px;border-radius:4px;border:0;color:var(--accent);min-width:140px;box-sizing:border-box}
+    .visitor-legend{font-family: 'Orbitron', monospace;font-size:0.72rem;color:var(--accent);text-transform:uppercase;letter-spacing:1px;margin-bottom:6px}
+    .visitor-counter{font-family: 'Orbitron', monospace;font-weight:700;font-size:1.1rem;color:var(--accent);padding:4px 10px;letter-spacing:1px;min-width:72px;text-align:center;background:transparent}
+    .visitor-counter::after{content:'';display:inline-block;width:6px;height:6px;margin-left:8px;border-radius:50%;background:rgba(175,237,249,0.9);box-shadow:0 0 6px rgba(175,237,249,0.45);opacity:0.85;vertical-align:middle}
+    @media (max-width:420px){.visitor-counter{font-size:0.95rem;min-width:56px;padding:3px 6px}}
   </style>
 </head>
 <body>
@@ -35,12 +36,11 @@
             }
           })
           .catch(err=>{
-            // keep previous value; optionally show '-' on error
             console.warn('visitor counter fetch failed', err);
           });
       }
+      // initial refresh + periodic
       refresh();
-      // refresh every 5 minutes
       setInterval(refresh, 5*60*1000);
     })();
   </script>
